# os_lab2

./: .gitignore  CMakeLists.txt  README.md  ema-search-str.cpp  ema-search-str.h  generate-file.cpp  library.cpp  library.h  new-ema-search-str.cpp  test.cpp
.github/workflows/: ci.yml
